src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Company_Social_Links_FaceBook__c</fullName>
        <label>Company Social Links - FaceBook</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Social_Links_Twitter__c</fullName>
        <label>Company Social Links - Twitter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department_Type__c</fullName>
        <label>Department Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ES_Comp_Fit_Rating__c</fullName>
        <formula>IF($Setup.Rating_Configuration__c.ES_Comp_Fit_Rating_Cutoff_1__c &lt;=  ES_Comp_Fit_Score__c &amp;&amp;  ES_Comp_Fit_Score__c &lt;= 100,
	&quot;A&quot;,
	IF($Setup.Rating_Configuration__c.ES_Comp_Fit_Rating_Cutoff_2__c &lt;=  ES_Comp_Fit_Score__c &amp;&amp;  ES_Comp_Fit_Score__c &lt; $Setup.Rating_Configuration__c.ES_Comp_Fit_Rating_Cutoff_1__c,
		&quot;B&quot;,
		IF($Setup.Rating_Configuration__c.ES_Comp_Fit_Rating_Cutoff_3__c &lt;=  ES_Comp_Fit_Score__c &amp;&amp;  ES_Comp_Fit_Score__c &lt; $Setup.Rating_Configuration__c.ES_Comp_Fit_Rating_Cutoff_2__c,
			&quot;C&quot;,
			IF(0 &lt;= ES_Comp_Fit_Score__c &amp;&amp; ES_Comp_Fit_Score__c &lt; $Setup.Rating_Configuration__c.ES_Comp_Fit_Rating_Cutoff_3__c,
				&quot;D&quot;,
				&quot;&quot;
			)
		)
	)
)</formula>
        <label>Company Rating</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ES_Comp_Fit_Score__c</fullName>
        <label>Company Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ES_Engagment_Score__c</fullName>
        <label>ES Engagment Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ES_Fit_Score__c</fullName>
        <label>ES Fit Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ES_Person_Engagement_Rating__c</fullName>
        <formula>IF($Setup.Rating_Configuration__c.ES_Person_Engagement_Rating_Cutoff_1__c &lt;=  ES_Person_Engagement_Score__c &amp;&amp;  ES_Person_Engagement_Score__c &lt;= 100,
	&quot;A&quot;,
	IF($Setup.Rating_Configuration__c.ES_Person_Engagement_Rating_Cutoff_2__c &lt;=  ES_Person_Engagement_Score__c &amp;&amp;  ES_Person_Engagement_Score__c &lt; $Setup.Rating_Configuration__c.ES_Person_Engagement_Rating_Cutoff_1__c,
		&quot;B&quot;,
		IF($Setup.Rating_Configuration__c.ES_Person_Engagement_Rating_Cutoff_3__c &lt;=  ES_Person_Engagement_Score__c &amp;&amp;  ES_Person_Engagement_Score__c &lt; $Setup.Rating_Configuration__c.ES_Person_Engagement_Rating_Cutoff_2__c,
			&quot;C&quot;,
			IF(0 &lt;= ES_Person_Engagement_Score__c &amp;&amp; ES_Person_Engagement_Score__c &lt; $Setup.Rating_Configuration__c.ES_Person_Engagement_Rating_Cutoff_3__c,
				&quot;D&quot;,
				&quot;&quot;
			)
		)
	)
)</formula>
        <label>Contact Engagement Rating</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ES_Person_Engagement_Score__c</fullName>
        <label>Contact Engagement Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ES_Person_Fit_Rating__c</fullName>
        <formula>IF($Setup.Rating_Configuration__c.ES_Person_Fit_Rating_Cutoff_1__c &lt;= ES_Person_Fit_Score__c &amp;&amp; ES_Person_Fit_Score__c &lt;= 100,
&quot;A&quot;,
IF($Setup.Rating_Configuration__c.ES_Person_Fit_Rating_Cutoff_2__c &lt;= ES_Person_Fit_Score__c &amp;&amp; ES_Person_Fit_Score__c &lt; $Setup.Rating_Configuration__c.ES_Person_Fit_Rating_Cutoff_1__c,
&quot;B&quot;,
IF($Setup.Rating_Configuration__c.ES_Person_Fit_Rating_Cutoff_3__c &lt;= ES_Person_Fit_Score__c &amp;&amp; ES_Person_Fit_Score__c &lt; $Setup.Rating_Configuration__c.ES_Person_Fit_Rating_Cutoff_2__c,
&quot;C&quot;,
IF(0 &lt;= ES_Person_Fit_Score__c &amp;&amp; ES_Person_Fit_Score__c &lt; $Setup.Rating_Configuration__c.ES_Person_Fit_Rating_Cutoff_3__c,
&quot;D&quot;,
&quot;&quot;
)
)
)
)</formula>
        <label>Contact Rating</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ES_Person_Fit_Score__c</fullName>
        <label>Contact Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EverString_ID__c</fullName>
        <label>EverString ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <label>Industry</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insights__c</fullName>
        <label>Insights</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Title__c</fullName>
        <label>Job Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Type__c</fullName>
        <label>Job Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Languages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <picklist>
            <picklistValues>
                <fullName>Secondary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tertiary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overall_Score__c</fullName>
        <label>Overall Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Personal_Phone__c</fullName>
        <label>Personal Phone</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revenue__c</fullName>
        <label>Revenue</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SIC_Code__c</fullName>
        <label>SIC Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Social_Links_Facebook__c</fullName>
        <label>Social Links - Facebook</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Social_Links_Linkedin__c</fullName>
        <label>Social Links - Linkedin</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Social_Links_Twitter__c</fullName>
        <label>Social Links - Twitter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Venture_Capital_Latest_Funding__c</fullName>
        <label>Venture Capital - Latest Funding</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Venture_Capital_Latest_Inverstors__c</fullName>
        <label>Venture Capital - Latest Inverstors</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Venture_Capital_Total_Funding__c</fullName>
        <label>Venture Capital - Total  Funding</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_Behavior_Click_on_Free_Trial__c</fullName>
        <label>Web Behavior - Click on Free Trial</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_Behavior_Click_on_Pricing_Page__c</fullName>
        <label>Web Behavior - Click on Pricing Page</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_Traffic__c</fullName>
        <label>Web Traffic</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
</CustomObject>